--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,13 @@ volumes:
   nodemodules_data:
 
 services:
+  redis:
+    image : redis
+    hostname: redis
+    restart: always
+    # ports:
+    #   - "6379:6379"
+
   mongodb:
     build:
       context: ./mongodb
@@ -27,6 +34,7 @@ services:
     links:
      - nginx
      - mongodb
+     - redis
   nginx:
     build: ./nginx
     ports:
