--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "npm": "^5.0.3",
     "rxjs": "^5.4.1",
     "showdown": "^1.6.4",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
