--- a/server/package.json
+++ b/server/package.json
@@ -22,13 +22,16 @@
     "ejs": "^2.3.1",
     "express": "^4.0.0",
     "express-session": "^1.11.3",
+    "http2": "^3.3.6",
     "jwt-simple": "^0.4.1",
     "mongoose": "^4.11.0",
     "mysql": "^2.7.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
     "redis": "^0.12.1",
-    "winston": "^2.3.1"
+    "socket.io": "^2.0.3",
+    "winston": "^2.3.1",
+    "ws": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^4.0.2",
